k8s/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: devops-demo-api
spec:
  replicas: 2

  revisionHistoryLimit: 3

  selector:
    matchLabels:
      app: devops-demo-api

  strategy:
    canary:
      stableService: devops-demo-api-stable
      canaryService: devops-demo-api-canary

      trafficRouting:
        nginx:
          stableIngress: devops-demo-api-ingress

      maxSurge: 1
      maxUnavailable: 0

      steps:
        - setWeight: 10
        - analysis:
            templates:
              - templateName: devops-demo-api-success-rate
        - pause:
            duration: 30s
        - setWeight: 50
        - analysis:
            templates:
              - templateName: devops-demo-api-success-rate
        - pause:
            duration: 30s
        - setWeight: 100

  template:
    metadata:
      labels:
        app: devops-demo-api
      annotations:
        rollout-demo: "analysis-test-1"

    spec:
      terminationGracePeriodSeconds: 30

      imagePullSecrets:
        - name: ghcr-secret

      containers:
        - name: devops-demo-api
          image: 592685884777.dkr.ecr.ap-south-1.amazonaws.com/devops-demo-api:aws-1.1.0

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          securityContext:
            runAsUser: 10001
            runAsGroup: 10001
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL

          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
