k8s/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-api-stable
  namespace: default
  labels:
    app: devops-demo-api
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics/"
    prometheus.io/port: "8000"
spec:
  selector:
    app: devops-demo-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
