k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-demo-api
  namespace: default
  labels:
    app: devops-demo-api
spec:
  selector:
    app: devops-demo-api
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
