k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-demo-api-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: devops-demo-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-demo-api-stable
                port:
                  number: 8000
